--- a/app/src/main/res/layout/fragment_application_list.xml
+++ b/app/src/main/res/layout/fragment_application_list.xml
@@ -30,4 +30,14 @@
         android:textSize="16sp"
         android:visibility="gone" />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </FrameLayout> 
