--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Dark theme -->
-    <style name="Theme.VOHoportunitysconect.Dark" parent="Base.Theme.VOHoportunitysconect">
+    <!-- Base application theme for night mode -->
+    <style name="Base.Theme.VOHoportunitysconect" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryVariant">@color/blue_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/blue</item>
+        <item name="colorSecondaryVariant">@color/blue_dark</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:icon">@drawable/ic_heart_blue</item>
+        <item name="android:roundIcon">@drawable/ic_heart_blue</item>
+        <!-- Shape appearance -->
+        <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.App.SmallComponent</item>
+        <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.App.MediumComponent</item>
+        <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.App.LargeComponent</item>
+        <!-- Additional theme attributes -->
+        <item name="android:windowBackground">@color/black</item>
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <!-- Text colors -->
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <!-- Search bar colors -->
+        <item name="materialSearchBarStyle">@style/Widget.App.SearchBar</item>
+    </style>
+
+    <!-- Main application theme for night mode -->
+    <style name="Theme.VOHoportunitysconect" parent="Base.Theme.VOHoportunitysconect">
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">false</item>
-        <item name="android:windowBackground">@color/background_dark</item>
-        <item name="android:textColorPrimary">@color/text_primary</item>
-        <item name="android:textColorSecondary">@color/text_secondary</item>
+        <item name="actionBarStyle">@style/AppActionBar</item>
+    </style>
+
+    <!-- Action Bar style for night mode -->
+    <style name="AppActionBar" parent="Widget.AppCompat.ActionBar">
+        <item name="android:icon">@drawable/ic_heart_blue</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- No Action Bar theme for night mode -->
+    <style name="Theme.VOHoportunitysconect.NoActionBar" parent="Base.Theme.VOHoportunitysconect">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <!-- Search Bar style for night mode -->
+    <style name="Widget.App.SearchBar" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxBackgroundColor">@color/white</item>
+        <item name="hintTextColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="boxStrokeColor">@color/blue</item>
+    </style>
+
+    <!-- Card style for opportunities -->
+    <style name="Widget.App.CardView" parent="Widget.MaterialComponents.CardView">
+        <item name="cardBackgroundColor">@color/dark_gray</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
     </style>
 </resources> 
