--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,11 +15,13 @@
     <color name="black">#000000</color>
     <color name="gray">#757575</color>
     <color name="light_gray">#BDBDBD</color>
+    <color name="red">#F44336</color>
     
     <!-- Background Colors -->
     <color name="background">#F5F5F5</color>
     <color name="card_background">#FFFFFF</color>
     <color name="ic_launcher_background">#4CAF50</color>
+    <color name="profile_picture_background">#E0E0E0</color>
     
     <!-- Text Colors -->
     <color name="text_primary">#212121</color>
@@ -72,5 +74,13 @@
     <color name="urgent_red">#FFE53935</color>
     <color name="orange">#FFA500</color>
     <color name="green">#4CAF50</color>
+    <color name="green_dark">#388E3C</color>
+    <color name="green_light">#81C784</color>
+    
+    <!-- Dark theme colors -->
+    <color name="dark_gray">#1F1F1F</color>
+    <color name="blue">#2196F3</color>
+    <color name="blue_dark">#1976D2</color>
+    <color name="blue_light">#64B5F6</color>
 </resources>
    
