--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,19 +2,23 @@
 <resources>
     <!-- Base application theme -->
     <style name="Base.Theme.VOHoportunitysconect" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/primary_dark</item>
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryVariant">@color/green_dark</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/accent</item>
-        <item name="colorSecondaryVariant">@color/primary_darker</item>
+        <item name="colorSecondary">@color/green</item>
+        <item name="colorSecondaryVariant">@color/green_dark</item>
         <item name="colorOnSecondary">@color/white</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <item name="android:icon">@drawable/ic_heart_white</item>
-        <item name="android:roundIcon">@drawable/ic_heart_white</item>
+        <item name="android:icon">@drawable/ic_heart_green</item>
+        <item name="android:roundIcon">@drawable/ic_heart_green</item>
         <!-- Shape appearance -->
         <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.App.SmallComponent</item>
         <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.App.MediumComponent</item>
         <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.App.LargeComponent</item>
+        <!-- Additional theme attributes -->
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:navigationBarColor">@color/green</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <!-- Main application theme -->
@@ -26,7 +30,7 @@
 
     <!-- Action Bar style -->
     <style name="AppActionBar" parent="Widget.AppCompat.ActionBar">
-        <item name="android:icon">@drawable/ic_heart_white</item>
+        <item name="android:icon">@drawable/ic_heart_green</item>
     </style>
 
     <!-- No Action Bar theme -->
